--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <div class="nav-links">
           <ul>
-            <li><a href="#Projects">Projects</a></li>
+            <li><a href="#projects">Projects</a></li>
             <li><a href="#About">About</a></li>
             <li><a href="mailto: jerrisneh@gmail.com">Contact</a></li>
           </ul>
@@ -41,11 +41,11 @@
         </ul>
       </div>
     </nav>
-    <main class="hero">
+    <div class="hero">
       <div>
         <h1>Hello, I'm Jeremiah</h1>
         <p>
-          I"m a web developer with a deep love for turning concepts into
+          I'm a web developer with a deep love for turning concepts into
           captivating online experiences. My journey in the world of web
           development has been a thrilling exploration of codes, creativity, and
           continuous learning, with a keen eye for design and turning ideas into
@@ -56,8 +56,8 @@
       <div>
         <img src="./Assets/mypic.jpg" alt="mypic" />
       </div>
-    </main>
-    <section class="about">
+    </div>
+    <section class="about" id="About">
       <div>
         <h2>About me</h2>
         <p>
@@ -76,30 +76,29 @@
         <img src="./Assets/drawing.svg" alt="drawing" />
       </div>
     </section>
-    <section class="projects">
+
+    <section class="projects" id="projects">
       <h2>Projects</h2>
       <div class="card-row">
         <div class="cards">
-          <img src="./Assets/desktop-design.jpg" alt="desktop-design" />
-          <h3>Title</h3>
+          <img src="./Assets/Birght-future.jpg" alt="Birght-future" />
+          <h3>Bright-future</h3>
           <hr />
           <p>
-            about porject Lorem ipsum dolor, sit amet consectetur adipisicing
-            elit. Neque, dignissimos mollitia quo culpa pariatur nesciunt?
-            Incidunt maxime eaque, beatae alias quidem dolores iusto
-            consequuntur ad obcaecati nemo nihil sit?
+            This is a great small challenge to help get you used to building to
+            a design. There's no JS in this project, so you'll be able to focus
+            on your HTML & CSS skills.
           </p>
           <button class="btn">Look it up</button>
         </div>
         <div class="cards">
           <img src="./Assets/base-apparel.png" alt="base-apparel" />
-          <h3>Title</h3>
+          <h3>Base Apparel</h3>
           <hr />
           <p>
-            about porject Lorem ipsum dolor, sit amet consectetur adipisicing
-            elit. Neque, dignissimos mollitia quo culpa pariatur nesciunt?
-            Incidunt maxime eaque, beatae alias quidem dolores iusto
-            consequuntur ad obcaecati nemo nihil sit?
+            This is a great small challenge to help get you used to building to
+            a design. There's no JS in this project, so you'll be able to focus
+            on your HTML & CSS skills.
           </p>
           <button class="btn">Look it up</button>
         </div>
@@ -107,51 +106,47 @@
       <div class="card-row">
         <div class="cards">
           <img src="./Assets/crest.png" alt="crest" />
-          <h3>Title</h3>
+          <h3>Crest</h3>
           <hr />
           <p>
-            about porject Lorem ipsum dolor, sit amet consectetur adipisicing
-            elit. Neque, dignissimos mollitia quo culpa pariatur nesciunt?
-            Incidunt maxime eaque, beatae alias quidem dolores iusto
-            consequuntur ad obcaecati nemo nihil sit?
+            This is a great small challenge to help get you used to building to
+            a design. There's no JS in this project, so you'll be able to focus
+            on your HTML & CSS skills.
           </p>
           <button class="btn">Look it up</button>
         </div>
         <div class="cards">
-          <img src="./Assets/desktop-design.jpg" alt="desktop-design" />
-          <h3>Title</h3>
+          <img src="./Assets/learn-to-code.png" alt="learn-to-code" />
+          <h3>Learn to code</h3>
           <hr />
           <p>
-            about porject Lorem ipsum dolor, sit amet consectetur adipisicing
-            elit. Neque, dignissimos mollitia quo culpa pariatur nesciunt?
-            Incidunt maxime eaque, beatae alias quidem dolores iusto
-            consequuntur ad obcaecati nemo nihil sit?
+            This is a great small challenge to help get you used to building to
+            a design. There's no JS in this project, so you'll be able to focus
+            on your HTML & CSS skills.
           </p>
           <button class="btn">Look it up</button>
         </div>
       </div>
       <div class="card-row">
         <div class="cards">
-          <img src="./Assets/desktop-design.jpg" alt="desktop-design" />
-          <h3>Title</h3>
+          <img src="./Assets/Perfume.png" alt="Perfume" />
+          <h3>Burberry Mint</h3>
           <hr />
           <p>
-            about porject Lorem ipsum dolor, sit amet consectetur adipisicing
-            elit. Neque, dignissimos mollitia quo culpa pariatur nesciunt?
-            Incidunt maxime eaque, beatae alias quidem dolores iusto
-            consequuntur ad obcaecati nemo nihil sit?
+            This is a great small challenge to help get you used to building to
+            a design. There's no JS in this project, so you'll be able to focus
+            on your HTML & CSS skills.
           </p>
           <button class="btn">Look it up</button>
         </div>
         <div class="cards">
-          <img src="./Assets/desktop-design.jpg" alt="desktop-design" />
-          <h3>Title</h3>
+          <img src="./Assets/Get-insights.png" alt="Get-insight" />
+          <h3>Stats preview</h3>
           <hr />
           <p>
-            about porject Lorem ipsum dolor, sit amet consectetur adipisicing
-            elit. Neque, dignissimos mollitia quo culpa pariatur nesciunt?
-            Incidunt maxime eaque, beatae alias quidem dolores iusto
-            consequuntur ad obcaecati nemo nihil sit?
+            This is a great small challenge to help get you used to building to
+            a design. There's no JS in this project, so you'll be able to focus
+            on your HTML & CSS skills.
           </p>
           <button class="btn">Look it up</button>
         </div>
