started responsive still flixing

--- a/index.html
+++ b/index.html
@@ -16,29 +16,35 @@
     <nav class="nav-bar">
       <div class="nav-both">
         <div class="nav-logo">
-          <a href="">
+          <a href="#">
             <img src="./Assets/logo.svg" alt="nav-logo" />
           </a>
           <p>Portfolio</p>
         </div>
         <div class="nav-links">
           <ul>
-            <li><a href="#projects">Projects</a></li>
+            <li><a href="#Projects">Projects</a></li>
             <li><a href="#About">About</a></li>
             <li><a href="mailto: jerrisneh@gmail.com">Contact</a></li>
           </ul>
         </div>
       </div>
-      <div class="nav-links-logos">
-        <ul>
-          <li>
-            <a href="#">
-              <img src="./Assets/mark-github-24.svg" alt="mark-github-24" />
-            </a>
-          </li>
-          <li><img src="./Assets/Linkedin.svg" alt="Linkedin" /></li>
-          <li><img src="./Assets/Figma.svg" alt="Figma" /></li>
-        </ul>
+
+      <div class="nav-logo-both">
+        <div class="nav-links-logos">
+          <ul>
+            <li>
+              <a href="#">
+                <img src="./Assets/mark-github-24.svg" alt="mark-github-24" />
+              </a>
+            </li>
+            <li><img src="./Assets/Linkedin.svg" alt="Linkedin" /></li>
+            <li><img src="./Assets/Figma.svg" alt="Figma" /></li>
+          </ul>
+        </div>
+        <div class="nav-hamb">
+          <img src="./Assets/icon-hamb.svg" alt="icon-hamb" />
+        </div>
       </div>
     </nav>
     <div class="hero">
@@ -77,7 +83,7 @@
       </div>
     </section>
 
-    <section class="projects" id="projects">
+    <section class="projects" id="Projects">
       <h2>Projects</h2>
       <div class="card-row">
         <div class="cards">
